--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo_full"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/logo"
@@ -19,7 +19,7 @@
         android:theme="@style/HiddenTitleTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".VideoSelect" />
+        <activity android:name=".videoselect.VideoSelect" />
         <activity android:name=".PlayerActivity.PlayerActivity" />
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
